# MCP_test

./: .gitignore
Reddit_search_ mcp/mcp-server-reddit/: README.md  pyproject.toml
Reddit_search_ mcp/mcp-server-reddit/src/mcp_server_reddit/: __init__.py  server.py
research_mcp/: .env  server.py
