[project]
name = "mcp-server-reddit"
version = "0.2.0"
description = "A Model Context Protocol (MCP) server that provides tools for fetching Reddit content, including frontpage posts, subreddit information and hot posts, post details, and comments."
readme = "README.md"
requires-python = ">=3.11"

keywords = ["reddit", "mcp", "llm"]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "redditwarp>=1.3.0",
]

[project.scripts]
mcp-server-reddit = "mcp_server_reddit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"